--- a/composer.json
+++ b/composer.json
@@ -21,16 +21,19 @@
         }
     },
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.2",
         "ext-json": "*",
-        "codeception/codeception": ">=2.5",
-        "behat/behat": "^3.5"
+        "codeception/codeception": "~4.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.11.5",
         "squizlabs/php_codesniffer": "^3.4",
         "phpmd/phpmd": "^2.6",
-        "mikey179/vfsStream": "^1.6"
+        "phpro/grumphp": "^0.18.0",
+        "codeception/module-asserts": "^1.1",
+        "codeception/module-webdriver": "^1.0",
+        "codeception/module-rest": "^1.2",
+        "behat/behat": "^3.6",
+        "mikey179/vfsstream": "^1.6"
     },
     "suggest": {
         "edno/codeception-gherkin-param": "The Codeception extension for supporting parameter notation in Gherkin scenario.",
